// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InputTextarea default 1`] = `
<label
  className="jsx-1354988747"
>
  <textarea
    className="jsx-1873754240"
    onChange={[Function]}
  >
    
  </textarea>
</label>
`;

exports[`Storyshots InputTextarea empty 1`] = `
<label
  className="jsx-1354988747"
>
  <div
    className="jsx-1354988747"
  >
    <span
      className="jsx-1620445214"
    >
      Text label
    </span>
  </div>
  <textarea
    className="jsx-1873754240"
    onChange={[Function]}
  >
    
  </textarea>
</label>
`;

exports[`Storyshots InputTextarea error 1`] = `
Array [
  <label
    className="jsx-1354988747"
  >
    <div
      className="jsx-1354988747"
    >
      <span
        className="jsx-1867159016"
      >
        Text label
      </span>
    </div>
    <textarea
      className="jsx-3284876408"
      onChange={[Function]}
    >
      input value
    </textarea>
  </label>,
  <span
    className="jsx-3092314264"
  >
    Error message
  </span>,
]
`;

exports[`Storyshots InputTextarea label 1`] = `
<label
  className="jsx-1354988747"
>
  <div
    className="jsx-1354988747"
  >
    <span
      className="jsx-1867159016"
    >
      Text label
    </span>
  </div>
  <textarea
    className="jsx-1873754240"
    onChange={[Function]}
  >
    First line,
second line,
third line...
  </textarea>
</label>
`;
